--- a/config/sync/language/de/views.view.user_admin_people.yml
+++ b/config/sync/language/de/views.view.user_admin_people.yml
@@ -7,6 +7,8 @@ display:
       fields:
         status:
           label: Status
+        roles_target_id:
+          label: Rollen
         operations:
           label: Aktionen
       filters:
