--- a/config/sync/language/de/views.view.content.yml
+++ b/config/sync/language/de/views.view.content.yml
@@ -5,11 +5,23 @@ display:
         options:
           reset_button_label: Zurücksetzen
       fields:
+        title:
+          label: Titel
+        type:
+          label: Inhaltstyp
+        name:
+          label: Autor
         status:
           label: Status
         operations:
           label: Aktionen
       filters:
+        title:
+          expose:
+            label: Titel
+        type:
+          expose:
+            label: Inhaltstyp
         status:
           expose:
             label: Status
