--- a/config/sync/language/de/views.view.comment.yml
+++ b/config/sync/language/de/views.view.comment.yml
@@ -5,6 +5,11 @@ display:
       exposed_form:
         options:
           reset_button_label: Zurücksetzen
+          exposed_sorts_label: 'Sortieren nach'
+      pager:
+        options:
+          expose:
+            items_per_page_options_all_label: '- Alle -'
       fields:
         name:
           label: Autor
