--- a/config/sync/language/de/views.view.watchdog.yml
+++ b/config/sync/language/de/views.view.watchdog.yml
@@ -4,6 +4,11 @@ display:
       exposed_form:
         options:
           reset_button_label: Zurücksetzen
+          exposed_sorts_label: 'Sortieren nach'
+      pager:
+        options:
+          expose:
+            items_per_page_options_all_label: '- Alle -'
       fields:
         type:
           label: Typ
