--- a/config/sync/language/de/views.view.who_s_online.yml
+++ b/config/sync/language/de/views.view.who_s_online.yml
@@ -4,3 +4,4 @@ display:
       exposed_form:
         options:
           reset_button_label: Zurücksetzen
+          exposed_sorts_label: 'Sortieren nach'
