Add entity_browser module and config

--- a/config/sync/language/de/views.view.content.yml
+++ b/config/sync/language/de/views.view.content.yml
@@ -5,11 +5,19 @@ display:
         options:
           reset_button_label: Zurücksetzen
           exposed_sorts_label: 'Sortieren nach'
+          sort_asc_label: Aufsteigend
+          sort_desc_label: Absteigend
+      pager:
+        options:
+          tags:
+            previous: '‹ Vorherige Seite'
+            next: 'Nächste Seite ›'
       fields:
         title:
           label: Titel
         type:
           label: Inhaltstyp
+          separator: ', '
         name:
           label: Autor
         status:
@@ -26,3 +34,4 @@ display:
         status:
           expose:
             label: Status
+    display_title: Master
