--- a/config/sync/language/de/views.view.user_admin_people.yml
+++ b/config/sync/language/de/views.view.user_admin_people.yml
@@ -1,14 +1,22 @@
 display:
   default:
+    display_title: Master
     display_options:
       exposed_form:
         options:
           reset_button_label: Zurücksetzen
           exposed_sorts_label: 'Sortieren nach'
+          sort_asc_label: Aufsteigend
+          sort_desc_label: Absteigend
       pager:
         options:
+          tags:
+            previous: '‹ Vorherige Seite'
+            next: 'Nächste Seite ›'
           expose:
+            items_per_page_label: 'Elemente pro Seite'
             items_per_page_options_all_label: '- Alle -'
+            offset_label: Versatz
       fields:
         status:
           label: Status
@@ -16,6 +24,8 @@ display:
           label: Rollen
         operations:
           label: Aktionen
+        mail:
+          separator: ', '
       filters:
         status:
           group_info:
