--- a/config/sync/language/de/webform.settings.yml
+++ b/config/sync/language/de/webform.settings.yml
@@ -2,3 +2,5 @@ settings:
   default_submit_button_label: Absenden
   default_reset_button_label: Zurücksetzen
   default_wizard_start_label: Beginn
+  default_preview_next_button_label: Vorschau
+  default_preview_label: Vorschau
