Add entity_embed module and config

--- a/config/sync/language/de/views.view.user_admin_people.yml
+++ b/config/sync/language/de/views.view.user_admin_people.yml
@@ -30,3 +30,7 @@ display:
         status:
           group_info:
             label: Status
+  page_1:
+    display_options:
+      menu:
+        title: Liste
