--- a/config/sync/language/de/views.view.watchdog.yml
+++ b/config/sync/language/de/views.view.watchdog.yml
@@ -15,6 +15,8 @@ display:
             items_per_page_options_all_label: '- Alle -'
             offset_label: Versatz
       fields:
+        nothing:
+          admin_label: Symbol
         type:
           label: Typ
         message:
