--- a/config/sync/language/de/views.view.files.yml
+++ b/config/sync/language/de/views.view.files.yml
@@ -26,6 +26,8 @@ display:
           label: MIME-Typ
         status:
           label: Status
+        count:
+          label: 'Verwendet in'
       filters:
         filename:
           expose:
