Add field_permissions module and config

--- a/config/sync/language/de/views.view.user_admin_people.yml
+++ b/config/sync/language/de/views.view.user_admin_people.yml
@@ -30,6 +30,9 @@ display:
         status:
           group_info:
             label: Status
+        permission:
+          expose:
+            label: Berechtigung
   page_1:
     display_options:
       menu:
