--- a/config/sync/language/de/views.view.files.yml
+++ b/config/sync/language/de/views.view.files.yml
@@ -59,3 +59,9 @@ display:
           label: Entität
         type:
           label: Entitätstyp
+        count:
+          format_plural_string: !!binary MQNAY291bnQ=
+      arguments:
+        fid:
+          exception:
+            title: Alle
