--- a/config/sync/language/de/views.view.frontpage.yml
+++ b/config/sync/language/de/views.view.frontpage.yml
@@ -17,4 +17,8 @@ display:
           tags:
             previous: '‹ Vorherige Seite'
             next: 'Nächste Seite ›'
+            first: '« Anfang'
+            last: 'Ende »'
     display_title: Master
+  page_1:
+    display_title: Seite
