--- a/config/sync/language/de/views.view.taxonomy_term.yml
+++ b/config/sync/language/de/views.view.taxonomy_term.yml
@@ -15,3 +15,9 @@ display:
             items_per_page_label: 'Elemente pro Seite'
             items_per_page_options_all_label: '- Alle -'
             offset_label: Versatz
+      arguments:
+        tid:
+          exception:
+            title: Alle
+  page_1:
+    display_title: Seite
