--- a/config/sync/language/de/views.view.who_s_new.yml
+++ b/config/sync/language/de/views.view.who_s_new.yml
@@ -9,3 +9,6 @@ display:
           exposed_sorts_label: 'Sortieren nach'
           sort_asc_label: Aufsteigend
           sort_desc_label: Absteigend
+  block_1:
+    display_options:
+      block_category: Benutzer
