--- a/config/sync/language/de/views.view.archive.yml
+++ b/config/sync/language/de/views.view.archive.yml
@@ -15,3 +15,5 @@ display:
             items_per_page_label: 'Elemente pro Seite'
             items_per_page_options_all_label: '- Alle -'
             offset_label: Versatz
+  page_1:
+    display_title: Seite
