Add metatag module and config

--- a/config/sync/language/de/views.view.media.yml
+++ b/config/sync/language/de/views.view.media.yml
@@ -25,6 +25,7 @@ display:
         media_bulk_form:
           action_title: Aktion
         thumbnail__target_id:
+          label: Miniaturbild
           separator: ', '
         name:
           label: Medienname
