--- a/config/sync/language/de/views.view.comment.yml
+++ b/config/sync/language/de/views.view.comment.yml
@@ -25,6 +25,7 @@ display:
         comment_bulk_form:
           action_title: Aktion
         subject:
+          label: Betreff
           separator: ', '
         uid:
           separator: ', '
@@ -40,6 +41,9 @@ display:
         name_1:
           separator: ', '
       filters:
+        subject:
+          expose:
+            label: Betreff
         langcode:
           expose:
             label: Sprache
@@ -51,6 +55,9 @@ display:
   page_unapproved:
     display_options:
       filters:
+        subject:
+          expose:
+            label: Betreff
         langcode:
           expose:
             label: Sprache
@@ -58,6 +65,7 @@ display:
         comment_bulk_form:
           action_title: Aktion
         subject:
+          label: Betreff
           separator: ', '
         uid:
           separator: ', '
