--- a/config/sync/language/de/views.view.webform_submissions.yml
+++ b/config/sync/language/de/views.view.webform_submissions.yml
@@ -12,6 +12,8 @@ display:
       pager:
         options:
           tags:
+            previous: ‹‹
+            next: ››
             first: '« Anfang'
             last: 'Ende »'
           expose:
