--- a/config/sync/language/de/views.view.archive.yml
+++ b/config/sync/language/de/views.view.archive.yml
@@ -15,5 +15,8 @@ display:
             items_per_page_label: 'Elemente pro Seite'
             items_per_page_options_all_label: '- Alle -'
             offset_label: Versatz
+          tags:
+            previous: ‹‹
+            next: ››
   page_1:
     display_title: Seite
