--- a/config/sync/language/de/views.view.taxonomy_term.yml
+++ b/config/sync/language/de/views.view.taxonomy_term.yml
@@ -16,6 +16,9 @@ display:
             items_per_page_label: 'Elemente pro Seite'
             items_per_page_options_all_label: '- Alle -'
             offset_label: Versatz
+          tags:
+            previous: ‹‹
+            next: ››
       arguments:
         tid:
           exception:
